# kv_ble

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  PLAN.md  pm_static.yml
config/: central.overlay  peripheral.overlay  prj_central.conf  prj_peripheral.conf
linux/: km_relay.py
src/central/: main.c
src/peripheral/: main.c
